--- a/simple_random_forest.ipynb
+++ b/simple_random_forest.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ratetot_num', 'ratetot_sz', 'ratet_num_0', 'ratet_num_2', 'ratet_sz_0', 'ratet_sz_2', 'rate_num_0', 'rate_num_2', 'rate_num_4', 'rate_num_6', 'rate_num_16', 'rate_num_18', 'rate_num_20', 'rate_num_34', 'rate_num_40', 'rate_num_44', 'rate_num_48', 'rate_num_52', 'rate_num_54', 'rate_sz_0', 'rate_sz_2', 'rate_sz_4', 'rate_sz_6', 'rate_sz_16', 'rate_sz_18', 'rate_sz_20', 'rate_sz_34', 'rate_sz_40', 'rate_sz_44', 'rate_sz_48', 'rate_sz_52', 'rate_sz_54', 'fract_num_0', 'fract_num_2', 'fract_sz_0', 'fract_sz_2', 'frac_num_0', 'frac_num_2', 'frac_num_4', 'frac_num_16', 'frac_num_18', 'frac_num_20', 'frac_num_34', 'frac_num_40', 'frac_num_44', 'frac_num_48', 'frac_num_52', 'frac_sz_0', 'frac_sz_2', 'frac_sz_4', 'frac_sz_16', 'frac_sz_18', 'frac_sz_20', 'frac_sz_34', 'frac_sz_40', 'frac_sz_44', 'frac_sz_48', 'frac_sz_52', 'sratt_num_0', 'sratt_num_2', 'sratt_sz_0', 'sratt_sz_2', 'srat_num_2', 'srat_num_18', 'srat_num_34', 'srat_num_44', 'srat_num_48', 'srat_num_52', 'srat_sz_2', 'srat_sz_18', 'srat_sz_34', 'srat_sz_44', 'srat_sz_48', 'srat_sz_52', 'ltot_sz', 'lt_sz_0', 'lt_sz_2', 'l_sz_0', 'l_sz_2', 'l_sz_4', 'l_sz_6', 'l_sz_16', 'l_sz_18', 'l_sz_20', 'l_sz_34', 'l_sz_40', 'l_sz_44', 'l_sz_48', 'l_sz_52', 'l_sz_54', 'sdtot', 'sdt_sz0', 'sdt_sz2', 'sd_sz0', 'sd_sz2', 'sd_sz4', 'sd_sz16', 'sd_sz18', 'sd_sz20', 'sd_sz34', 'sd_sz40', 'sd_sz44', 'sd_sz48', 'sd_sz52']\n"
+      "['ratetot_num', 'ratetot_sz', 'ratet_num_0', 'ratet_num_2', 'ratet_sz_0', 'ratet_sz_2', 'rate_num_0', 'rate_num_2', 'rate_num_4', 'rate_num_6', 'rate_num_16', 'rate_num_18', 'rate_num_20', 'rate_num_34', 'rate_num_40', 'rate_num_44', 'rate_num_48', 'rate_num_52', 'rate_num_54', 'rate_sz_0', 'rate_sz_2', 'rate_sz_4', 'rate_sz_6', 'rate_sz_16', 'rate_sz_18', 'rate_sz_20', 'rate_sz_34', 'rate_sz_40', 'rate_sz_44', 'rate_sz_48', 'rate_sz_52', 'rate_sz_54', 'fract_num_0', 'fract_num_2', 'fract_sz_0', 'fract_sz_2', 'frac_num_0', 'frac_num_2', 'frac_num_4', 'frac_num_16', 'frac_num_18', 'frac_num_20', 'frac_num_34', 'frac_num_40', 'frac_num_44', 'frac_num_48', 'frac_num_52', 'frac_sz_0', 'frac_sz_2', 'frac_sz_4', 'frac_sz_16', 'frac_sz_18', 'frac_sz_20', 'frac_sz_34', 'frac_sz_40', 'frac_sz_44', 'frac_sz_48', 'frac_sz_52', 'sratt_num_0', 'sratt_num_2', 'sratt_sz_0', 'sratt_sz_2', 'srat_num_2', 'srat_num_18', 'srat_num_34', 'srat_num_44', 'srat_num_48', 'srat_num_52', 'srat_sz_2', 'srat_sz_18', 'srat_sz_34', 'srat_sz_44', 'srat_sz_48', 'srat_sz_52', 'ltot_sz', 'lt_sz_0', 'lt_sz_2', 'l_sz_0', 'l_sz_2', 'l_sz_4', 'l_sz_6', 'l_sz_16', 'l_sz_18', 'l_sz_20', 'l_sz_34', 'l_sz_40', 'l_sz_44', 'l_sz_48', 'l_sz_52', 'l_sz_54', 'sdtot', 'sdt_sz_0', 'sdt_sz_2', 'sd_sz_0', 'sd_sz_2', 'sd_sz_4', 'sd_sz_16', 'sd_sz_18', 'sd_sz_20', 'sd_sz_34', 'sd_sz_40', 'sd_sz_44', 'sd_sz_48', 'sd_sz_52']\n"
      ]
     }
    ],
@@ -277,119 +287,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 105,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def explain_subtype(f):\n",
+    "    parts = f.split('_')\n",
+    "    if len(parts) <= 2: return f\n",
+    "    st = int(parts[-1])\n",
+    "    if parts[0] in ['ratet', 'fract', 'sratt', 'lt', 'sdt']:\n",
+    "        if st == 0:\n",
+    "            return '{} ({})'.format(f, 'Management')\n",
+    "        elif st == 1:\n",
+    "            return '{} ({})'.format(f, 'Control')\n",
+    "        elif st == 2:\n",
+    "            return '{} ({})'.format(f, 'Data')\n",
+    "    else:\n",
+    "        return '{} ({})'.format(f, frame_types[st])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('ratet_num_2', 0.10771507477960914),\n",
-       " ('rate_num_2', 0.086285683146575115),\n",
-       " ('rate_sz_2', 0.077911477458968786),\n",
+       "[('ratet_num_2 (Data)', 0.10771507477960914),\n",
+       " ('rate_num_2 (Data - Data)', 0.086285683146575115),\n",
+       " ('rate_sz_2 (Data - Data)', 0.077911477458968786),\n",
        " ('ratetot_num', 0.069834878465822994),\n",
        " ('ltot_sz', 0.053505151886625281),\n",
-       " ('fract_num_0', 0.044861888828269136),\n",
-       " ('sratt_num_0', 0.043434779456159041),\n",
-       " ('rate_num_34', 0.038517330412551169),\n",
-       " ('ratet_sz_2', 0.033508496297027741),\n",
-       " ('rate_sz_34', 0.032989014122481328),\n",
+       " ('fract_num_0 (Management)', 0.044861888828269136),\n",
+       " ('sratt_num_0 (Management)', 0.043434779456159041),\n",
+       " ('rate_num_34 (Data - QoS Data)', 0.038517330412551169),\n",
+       " ('ratet_sz_2 (Data)', 0.033508496297027741),\n",
+       " ('rate_sz_34 (Data - QoS Data)', 0.032989014122481328),\n",
        " ('ratetot_sz', 0.03096179782383001),\n",
-       " ('sd_sz2', 0.027751403468139757),\n",
-       " ('frac_num_2', 0.027180366279625407),\n",
-       " ('lt_sz_2', 0.025926638171271131),\n",
-       " ('srat_sz_34', 0.025031806103233772),\n",
-       " ('frac_num_34', 0.024872328454186229),\n",
-       " ('sratt_sz_0', 0.022952942081428094),\n",
-       " ('ratet_sz_0', 0.021927333223650612),\n",
-       " ('lt_sz_0', 0.021366472492438511),\n",
-       " ('frac_sz_2', 0.019219480280359077),\n",
-       " ('srat_sz_52', 0.019085905915974793),\n",
-       " ('rate_num_16', 0.018882885760963843),\n",
-       " ('sratt_num_2', 0.013636998555524037),\n",
-       " ('l_sz_34', 0.012800228831848889),\n",
-       " ('srat_num_2', 0.012596679332784433),\n",
-       " ('l_sz_2', 0.012507412225349448),\n",
+       " ('sd_sz_2 (Data - Data)', 0.027751403468139757),\n",
+       " ('frac_num_2 (Data - Data)', 0.027180366279625407),\n",
+       " ('lt_sz_2 (Data)', 0.025926638171271131),\n",
+       " ('srat_sz_34 (Data - QoS Data)', 0.025031806103233772),\n",
+       " ('frac_num_34 (Data - QoS Data)', 0.024872328454186229),\n",
+       " ('sratt_sz_0 (Management)', 0.022952942081428094),\n",
+       " ('ratet_sz_0 (Management)', 0.021927333223650612),\n",
+       " ('lt_sz_0 (Management)', 0.021366472492438511),\n",
+       " ('frac_sz_2 (Data - Data)', 0.019219480280359077),\n",
+       " ('srat_sz_52 (Management - Action)', 0.019085905915974793),\n",
+       " ('rate_num_16 (Management - Probe Request)', 0.018882885760963843),\n",
+       " ('sratt_num_2 (Data)', 0.013636998555524037),\n",
+       " ('l_sz_34 (Data - QoS Data)', 0.012800228831848889),\n",
+       " ('srat_num_2 (Data - Data)', 0.012596679332784433),\n",
+       " ('l_sz_2 (Data - Data)', 0.012507412225349448),\n",
        " ('sdtot', 0.011350112399647668),\n",
-       " ('sdt_sz2', 0.0090007812564488858),\n",
-       " ('frac_sz_34', 0.0075428222631804976),\n",
-       " ('frac_sz_18', 0.007304969296450782),\n",
-       " ('sd_sz34', 0.0061730623631717496),\n",
-       " ('srat_num_34', 0.006129436624449691),\n",
-       " ('fract_sz_2', 0.0059311975713274697),\n",
-       " ('frac_num_18', 0.0058464434504503148),\n",
-       " ('frac_num_40', 0.0035272658972390369),\n",
-       " ('sratt_sz_2', 0.0026616581595225596),\n",
-       " ('rate_sz_48', 0.001588409182160723),\n",
-       " ('rate_sz_18', 0.0013568584062550928),\n",
-       " ('srat_sz_2', 0.001305777752606363),\n",
-       " ('l_sz_18', 0.0011717055655970385),\n",
-       " ('rate_num_18', 0.0011596475988071696),\n",
-       " ('srat_num_18', 0.00087811798904921837),\n",
-       " ('fract_sz_0', 0.00074932240039621474),\n",
-       " ('srat_sz_18', 0.00025937400777862463),\n",
-       " ('rate_sz_20', 0.0002104922912304684),\n",
-       " ('rate_num_40', 0.00015794866472900178),\n",
-       " ('rate_sz_16', 6.6615508488492427e-05),\n",
-       " ('fract_num_2', 6.1845576669851467e-05),\n",
-       " ('ratet_num_0', 5.0352516634347385e-05),\n",
-       " ('rate_sz_52', 4.6535631787274421e-05),\n",
-       " ('rate_sz_40', 3.5667929079706665e-05),\n",
-       " ('l_sz_0', 3.0446166839890108e-05),\n",
-       " ('sdt_sz0', 2.4586311629634469e-05),\n",
-       " ('rate_num_20', 2.3879065260954223e-05),\n",
-       " ('frac_sz_48', 2.2660920652642555e-05),\n",
-       " ('rate_sz_4', 2.032486182547961e-05),\n",
-       " ('rate_num_52', 1.1667841818183036e-05),\n",
-       " ('frac_sz_40', 1.1556335232572312e-05),\n",
-       " ('l_sz_48', 7.7452117213856876e-06),\n",
-       " ('l_sz_16', 7.7255365860035587e-06),\n",
-       " ('sd_sz18', 3.8954691579657379e-06),\n",
-       " ('srat_sz_44', 3.8746809231436092e-06),\n",
-       " ('sd_sz4', 7.6344049614767714e-07),\n",
-       " ('rate_num_0', 0.0),\n",
-       " ('rate_num_4', 0.0),\n",
-       " ('rate_num_6', 0.0),\n",
-       " ('rate_num_44', 0.0),\n",
-       " ('rate_num_48', 0.0),\n",
-       " ('rate_num_54', 0.0),\n",
-       " ('rate_sz_0', 0.0),\n",
-       " ('rate_sz_6', 0.0),\n",
-       " ('rate_sz_44', 0.0),\n",
-       " ('rate_sz_54', 0.0),\n",
-       " ('frac_num_0', 0.0),\n",
-       " ('frac_num_4', 0.0),\n",
-       " ('frac_num_16', 0.0),\n",
-       " ('frac_num_20', 0.0),\n",
-       " ('frac_num_44', 0.0),\n",
-       " ('frac_num_48', 0.0),\n",
-       " ('frac_num_52', 0.0),\n",
-       " ('frac_sz_0', 0.0),\n",
-       " ('frac_sz_4', 0.0),\n",
-       " ('frac_sz_16', 0.0),\n",
-       " ('frac_sz_20', 0.0),\n",
-       " ('frac_sz_44', 0.0),\n",
-       " ('frac_sz_52', 0.0),\n",
-       " ('srat_num_44', 0.0),\n",
-       " ('srat_num_48', 0.0),\n",
-       " ('srat_num_52', 0.0),\n",
-       " ('srat_sz_48', 0.0),\n",
-       " ('l_sz_4', 0.0),\n",
-       " ('l_sz_6', 0.0),\n",
-       " ('l_sz_20', 0.0),\n",
-       " ('l_sz_40', 0.0),\n",
-       " ('l_sz_44', 0.0),\n",
-       " ('l_sz_52', 0.0),\n",
-       " ('l_sz_54', 0.0),\n",
-       " ('sd_sz0', 0.0),\n",
-       " ('sd_sz16', 0.0),\n",
-       " ('sd_sz20', 0.0),\n",
-       " ('sd_sz40', 0.0),\n",
-       " ('sd_sz44', 0.0),\n",
-       " ('sd_sz48', 0.0),\n",
-       " ('sd_sz52', 0.0)]"
+       " ('sdt_sz_2 (Data)', 0.0090007812564488858),\n",
+       " ('frac_sz_34 (Data - QoS Data)', 0.0075428222631804976),\n",
+       " ('frac_sz_18 (Data - Null)', 0.007304969296450782),\n",
+       " ('sd_sz_34 (Data - QoS Data)', 0.0061730623631717496),\n",
+       " ('srat_num_34 (Data - QoS Data)', 0.006129436624449691),\n",
+       " ('fract_sz_2 (Data)', 0.0059311975713274697),\n",
+       " ('frac_num_18 (Data - Null)', 0.0058464434504503148),\n",
+       " ('frac_num_40 (Management - Disassociation)', 0.0035272658972390369),\n",
+       " ('sratt_sz_2 (Data)', 0.0026616581595225596),\n",
+       " ('rate_sz_48 (Management - Deauthentication)', 0.001588409182160723),\n",
+       " ('rate_sz_18 (Data - Null)', 0.0013568584062550928),\n",
+       " ('srat_sz_2 (Data - Data)', 0.001305777752606363),\n",
+       " ('l_sz_18 (Data - Null)', 0.0011717055655970385),\n",
+       " ('rate_num_18 (Data - Null)', 0.0011596475988071696),\n",
+       " ('srat_num_18 (Data - Null)', 0.00087811798904921837),\n",
+       " ('fract_sz_0 (Management)', 0.00074932240039621474),\n",
+       " ('srat_sz_18 (Data - Null)', 0.00025937400777862463),\n",
+       " ('rate_sz_20 (Management - Probe Response)', 0.0002104922912304684),\n",
+       " ('rate_num_40 (Management - Disassociation)', 0.00015794866472900178),\n",
+       " ('rate_sz_16 (Management - Probe Request)', 6.6615508488492427e-05),\n",
+       " ('fract_num_2 (Data)', 6.1845576669851467e-05),\n",
+       " ('ratet_num_0 (Management)', 5.0352516634347385e-05),\n",
+       " ('rate_sz_52 (Management - Action)', 4.6535631787274421e-05),\n",
+       " ('rate_sz_40 (Management - Disassociation)', 3.5667929079706665e-05),\n",
+       " ('l_sz_0 (Management - Association Request)', 3.0446166839890108e-05),\n",
+       " ('sdt_sz_0 (Management)', 2.4586311629634469e-05),\n",
+       " ('rate_num_20 (Management - Probe Response)', 2.3879065260954223e-05),\n",
+       " ('frac_sz_48 (Management - Deauthentication)', 2.2660920652642555e-05),\n",
+       " ('rate_sz_4 (Management - Association Response)', 2.032486182547961e-05),\n",
+       " ('rate_num_52 (Management - Action)', 1.1667841818183036e-05),\n",
+       " ('frac_sz_40 (Management - Disassociation)', 1.1556335232572312e-05),\n",
+       " ('l_sz_48 (Management - Deauthentication)', 7.7452117213856876e-06),\n",
+       " ('l_sz_16 (Management - Probe Request)', 7.7255365860035587e-06),\n",
+       " ('sd_sz_18 (Data - Null)', 3.8954691579657379e-06),\n",
+       " ('srat_sz_44 (Management - Authentication)', 3.8746809231436092e-06),\n",
+       " ('sd_sz_4 (Management - Association Response)', 7.6344049614767714e-07),\n",
+       " ('rate_num_0 (Management - Association Request)', 0.0),\n",
+       " ('rate_num_4 (Management - Association Response)', 0.0),\n",
+       " ('rate_num_6 (Data - Data + CF-Ack)', 0.0),\n",
+       " ('rate_num_44 (Management - Authentication)', 0.0),\n",
+       " ('rate_num_48 (Management - Deauthentication)', 0.0),\n",
+       " ('rate_num_54 (Data - Reserved)', 0.0),\n",
+       " ('rate_sz_0 (Management - Association Request)', 0.0),\n",
+       " ('rate_sz_6 (Data - Data + CF-Ack)', 0.0),\n",
+       " ('rate_sz_44 (Management - Authentication)', 0.0),\n",
+       " ('rate_sz_54 (Data - Reserved)', 0.0),\n",
+       " ('frac_num_0 (Management - Association Request)', 0.0),\n",
+       " ('frac_num_4 (Management - Association Response)', 0.0),\n",
+       " ('frac_num_16 (Management - Probe Request)', 0.0),\n",
+       " ('frac_num_20 (Management - Probe Response)', 0.0),\n",
+       " ('frac_num_44 (Management - Authentication)', 0.0),\n",
+       " ('frac_num_48 (Management - Deauthentication)', 0.0),\n",
+       " ('frac_num_52 (Management - Action)', 0.0),\n",
+       " ('frac_sz_0 (Management - Association Request)', 0.0),\n",
+       " ('frac_sz_4 (Management - Association Response)', 0.0),\n",
+       " ('frac_sz_16 (Management - Probe Request)', 0.0),\n",
+       " ('frac_sz_20 (Management - Probe Response)', 0.0),\n",
+       " ('frac_sz_44 (Management - Authentication)', 0.0),\n",
+       " ('frac_sz_52 (Management - Action)', 0.0),\n",
+       " ('srat_num_44 (Management - Authentication)', 0.0),\n",
+       " ('srat_num_48 (Management - Deauthentication)', 0.0),\n",
+       " ('srat_num_52 (Management - Action)', 0.0),\n",
+       " ('srat_sz_48 (Management - Deauthentication)', 0.0),\n",
+       " ('l_sz_4 (Management - Association Response)', 0.0),\n",
+       " ('l_sz_6 (Data - Data + CF-Ack)', 0.0),\n",
+       " ('l_sz_20 (Management - Probe Response)', 0.0),\n",
+       " ('l_sz_40 (Management - Disassociation)', 0.0),\n",
+       " ('l_sz_44 (Management - Authentication)', 0.0),\n",
+       " ('l_sz_52 (Management - Action)', 0.0),\n",
+       " ('l_sz_54 (Data - Reserved)', 0.0),\n",
+       " ('sd_sz_0 (Management - Association Request)', 0.0),\n",
+       " ('sd_sz_16 (Management - Probe Request)', 0.0),\n",
+       " ('sd_sz_20 (Management - Probe Response)', 0.0),\n",
+       " ('sd_sz_40 (Management - Disassociation)', 0.0),\n",
+       " ('sd_sz_44 (Management - Authentication)', 0.0),\n",
+       " ('sd_sz_48 (Management - Deauthentication)', 0.0),\n",
+       " ('sd_sz_52 (Management - Action)', 0.0)]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,14 +430,14 @@
    "source": [
     "forest = clfs[0].best_estimator_\n",
     "importances = list(zip(red_feat, forest.feature_importances_))\n",
-    "sorted(importances, key=lambda t: t[1], reverse=True)"
+    "list(map(lambda t: (explain_subtype(t[0]), t[1]), sorted(importances, key=lambda t: t[1], reverse=True)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
